# cuda-path-tracer

./: .gitignore  CMakeLists.txt  Project3-CUDA-Path-Tracer.launch  README.md
cmake/: CUDAComputesList.cmake  FindOptiX.cmake
scenes/: cornell.txt  customscene2.txt  sponza.txt
scenes/env/: studio_small_01_1k.hdr
scripts/: profile-nsys.ps1
src/: OptiXDenoiser.h  interactions.h  intersections.h  main.cpp  main.h  octree.cpp  octree.h  optixCheck.h  pathtrace.cu  pathtrace.h  preview.cpp  scene.cpp  scene.h  sceneStructs.h  utilities.h
src/app/: main.cpp  main.h  preview.cpp  preview.h
src/core/: image.cpp
src/geometry/: interactions.h  intersections.h  octree.cpp  octree.h
src/renderer/: PathTracer.cpp  PathTracer.h  PathTracerKernels.cu  RenderSettings.h  RenderState.h
src/renderer/denoise/: OptiXDenoiserUtil.h
src/renderer/gpu/: CudaBuffer.h  CudaCheck.h  CudaTexture2D.h  GpuFramebuffer.cu  GpuFramebuffer.h  GpuScene.cu  GpuScene.h
src/scene/: GltfSceneLoader.cpp  GltfSceneLoader.h  GpuSceneTypes.h  RenderScene.h  SceneLoader.h  TextSceneLoader.cpp  TextSceneLoader.h  scene.cpp  scene.h
